--- a/gb/17/9/28/n9678495.md
+++ b/gb/17/9/28/n9678495.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sxrssb2693/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/sxrssb2693/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/sxrssb2693/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/sxrssb2693/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/sxrssb2693/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/sxrssb2693/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/sxrssb2693/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/sxrssb2693/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/sxrssb2693/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/sxrssb2693/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/sxrssb2693/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/sxrssb2693/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/sxrssb2693/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>在英国想上名校 私人家教的作用有多大？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/09/Untitled-22-600x400.jpg" />
 <h6>英国权威教育鉴定机构Good Schools Guide认可的优秀辅导学校：Elm Village Tutors。校长詹姆斯·莱兰（James Layland），曾是帝国理工物理系高材生，在教育领域拥有25年以上执教经验，教学时间超过3万小时，他本人擅长辅导物理和数学，教出许许多多出色的学生。(Elm Village Tutors Ltd)
 </h6>
 <hr>
-<p>【大纪元2017年09月28日讯】在英国，课外补习之风不似“唯有读书高”的华人社会那样盛行。这与<ahref="https://github.com/sxrssb2693/djy/blob/master/gb/tag/%E8%8B%B1%E5%9B%BD%E6%95%99%E8%82%B2.md#1">英国教育</a>体制虽然严格但不乏弹性和包容有关——如果入不了名校甚至进不了大学， 还有其它多条道路可走，依然有希望获得成功或者过上相对舒适的生活 。但是作为精英教育的一个补充，在英国，私人家教帮助了很多学生提升信心、实现梦想，深受一些家庭的欢迎。</p>
+<p>【大纪元2017年09月28日讯】在英国，课外补习之风不似“唯有读书高”的华人社会那样盛行。这与<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%8B%B1%E5%9B%BD%E6%95%99%E8%82%B2.md#1">英国教育</a>体制虽然严格但不乏弹性和包容有关——如果入不了名校甚至进不了大学， 还有其它多条道路可走，依然有希望获得成功或者过上相对舒适的生活 。但是作为精英教育的一个补充，在英国，私人家教帮助了很多学生提升信心、实现梦想，深受一些家庭的欢迎。</p>
 <p>许多华裔家长，尤其是第一代、第二代移民，由于语言、环境和文化的差异，普遍对于教育孩子感到有些力不从心。学业事关孩子的未来，而自己却不知如何参与帮助，实在令家长们心中不安。聘用专业、优秀的家教无疑能很大程度地弥补这个缺憾。可惜的是，英国的家教机构大多比较低调，基本上靠口碑和熟客推荐，许多有此需求的华人家长往往得不到有用的资讯。</p>
 <h2><strong>辅导成功</strong> <strong>扩大团队</strong></h2>
 <p>今天特别介绍的是一家获英国权威教育鉴定机构Good Schools Guide认可的优秀辅导学校：Elm Village Tutors。校长詹姆斯·莱兰（James Layland），曾是帝国理工物理系高材生，在教育领域拥有25年以上执教经验，教学时间超过3万小时，他本人擅长辅导物理和数学，教出许许多多出色的学生。</p>
@@ -40,42 +40,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/15/8/18/n4506346.md#1">英国A-level发榜 大学录取人数创记录</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/1/25/n4624900.md#1">近七千人参观英国教育展</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/9/24/n8334126.md#1">英国——华人投资者最感兴趣的十大地区之一</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/12/6/n8565310.md#1">【专家谈】英国第一层级投资者移民签证</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/17/8/9/n9513175.md#1">58位当今世界领袖毕业于英国的大学</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/17/9/17/n9641016.md#1">嫁给了一个英国人（二）：先生的Gap Year</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/17/9/27/n9674631.md#1">英国伊顿公学 精英熔炉的演变之路</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/1/24/n11818994.md#1">英大学警告留学生 从中国返英后或被隔离</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/1/9/n11780045.md#1">补贴收入 英国公立中学希望招收中国学生</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/19/12/19/n11733868.md#1">英格兰小学官方排名公布</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/8/18/n4506346.md#1">英国A-level发榜 大学录取人数创记录</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/25/n4624900.md#1">近七千人参观英国教育展</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/9/24/n8334126.md#1">英国——华人投资者最感兴趣的十大地区之一</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/12/6/n8565310.md#1">【专家谈】英国第一层级投资者移民签证</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/8/9/n9513175.md#1">58位当今世界领袖毕业于英国的大学</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/9/17/n9641016.md#1">嫁给了一个英国人（二）：先生的Gap Year</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/9/27/n9674631.md#1">英国伊顿公学 精英熔炉的演变之路</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/1/24/n11818994.md#1">英大学警告留学生 从中国返英后或被隔离</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/1/9/n11780045.md#1">补贴收入 英国公立中学希望招收中国学生</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/12/19/n11733868.md#1">英格兰小学官方排名公布</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/28/n11616929.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（三）</a></li><li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11247031.md#1" target="_blank">加拿大渥太华市长连续9年宣布 法轮大法日</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/22/n10656949.md#1" target="_blank">胡健：少年反革命</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/11/n10845276.md#1" target="_blank">这些前中共媒体人的见证</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/4/n12002313.md#1">【拍案惊奇】中共为粮荒辟谣 海南现女版李文亮</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/5/n12004590.md#1">台疫情指挥中心：商店工作独居男感染源找到了</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/4/n12003758.md#1">组图：忧疫情再爆发 北京市民抢购粮食</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/4/n12003209.md#1">【最新疫情4.5】英首相高烧不退 送医检查</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/4/n12003547.md#1">病毒“精心设计”？台医生：半年前就担心会出事</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/3/n12001252.md#1">杜汶泽脸书贴图发文 爆呛中共掩盖疫情</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/4/n12003574.md#1">30岁维密超模染中共肺炎 时尚圈人心惶惶</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/5/n12004148.md#1">萧淑慎自曝罹癌 2月切除肿瘤后暴瘦10公斤</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/5/n12005398.md#1">女星赴西班牙探亲染疫 肺部受损紧急送医</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/5/n12004232.md#1">在台外国人以母语发声 赞扬台湾防疫做得好</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/1/n11994730.md#1">“中美相敬” 一个蒋中正逝世八年后才被宋美龄知道的秘密</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/1/n11994253.md#1">【命理】当我们算到自己的命不好时怎么办？</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/3/27/n11981509.md#1">高僧洞悉夙怨 慈悲化解恶缘</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/4/5/n12004356.md#1">疫情下纽约房东行善 免收几百名房客的租金</a></li>
-<li><a href="https://github.com/sxrssb2693/djy/blob/master/gb/20/3/27/n11980922.md#1">清明节风俗  人间与天地的契合</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11959110.md#1">【新闻看点】“抗疫胜利”炒过头 中共出手抓人</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11959398.md#1">【疫情最前线】意大利：中国没送任何东西！</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/21/n11960123.md#1">【拍案惊奇】川普指中共延误 武汉二次爆发预警</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/21/n11961699.md#1">追责中共隐瞒疫情 国际专家提六大方案</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955332.md#1">澳洲性侵案7罪名缠2年 男星高云翔获判无罪</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/sxrssb2693/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/sxrssb2693/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/9/28/n9678495.htm">在英国想上名校 私人家教的作用有多大？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/9/28/n9678495.htm">在英国想上名校 私人家教的作用有多大？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/sxrssb2693/djy/blob/master/gb/17/9/28/n9678495.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/sxrssb2693/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sxrssb2693/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sxrssb2693/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxrssb2693/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/17/9/28/n9678495.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
